--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "NODE_ENV=development node server.js",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -16,12 +16,17 @@
     "@mui/material": "^5.16.5",
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "firebase": "^10.12.4",
+    "fs": "^0.0.1-security",
     "geolib": "^3.3.4",
+    "https": "^1.0.0",
+    "install": "^0.13.0",
     "mapbox-gl": "^3.5.2",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-swipeable": "^7.0.1",
     "react-toastify": "^10.0.5"
   }
 }
