--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.2.1",
     "react-progress-bar": "^0.1.0",
     "react-slick": "^0.30.2",
     "react-swipeable": "^7.0.1",
     "react-toastify": "^10.0.5",
     "react-topbar-progress-indicator": "^4.1.1",
+    "react-world-flags": "^1.6.0",
     "slick-carousel": "^1.8.1"
   }
 }
