--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-swipeable": "^7.0.1",
     "react-toastify": "^10.0.5",
     "react-topbar-progress-indicator": "^4.1.1",
+    "react-transition-group": "^4.4.5",
     "react-world-flags": "^1.6.0",
     "slick-carousel": "^1.8.1"
   }
