--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mapbox-gl": "^3.5.2",
     "next": "14.2.4",
     "react": "^18",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-progress-bar": "^0.1.0",
