--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.16.5",
     "@mui/material": "^5.16.5",
     "@ramonak/react-progress-bar": "^5.2.0",
+    "@svgr/webpack": "^8.1.0",
     "@types/react-slick": "^0.23.13",
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
