--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,6 +2,9 @@
   "compilerOptions": {
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+    "target": "es6", // Set the target ECMAScript version
+    "module": "commonjs", 
+    "allowSyntheticDefaultImports": true 
   }
 }
