--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "firebase": "^10.12.4",
+    "framer-motion": "^11.9.0",
     "fs": "^0.0.1-security",
     "geolib": "^3.3.4",
     "https": "^1.0.0",
