--- a/package.json
+++ b/package.json
@@ -3,14 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "NODE_ENV=development node server.js",
+    "dev": "node server.js",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start"
   },
   "dependencies": {
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@mapbox/mapbox-gl-geocoder": "^5.0.2",
     "@mdi/js": "^7.4.47",
     "@mdi/react": "^1.6.1",
@@ -34,6 +36,7 @@
     "react-burger-menu": "^3.0.9",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18",
+    "react-flip-toolkit": "^7.2.4",
     "react-icons": "^5.2.1",
     "react-progress-bar": "^0.1.0",
     "react-slick": "^0.30.2",
