--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "https": "^1.0.0",
     "install": "^0.13.0",
     "mapbox-gl": "^3.5.2",
-    "next": "14.2.4",
+    "next": "^14.2.15",
     "react": "^18",
     "react-burger-menu": "^3.0.9",
     "react-datepicker": "^7.3.0",
